ME_QTRIPDYNAMIC_MODULE_ADVENTURES

--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -74,6 +74,7 @@ footer {
   z-index: 1;
   text-transform: uppercase;
   letter-spacing: 2px;
+  text-align: center;
 }
 .hero-image {
   /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
